--- a/src/app/person/person.component.html
+++ b/src/app/person/person.component.html
@@ -56,6 +56,7 @@
                         <th scope="col">Name</th>
                         <th scope="col">Department</th>
                         <th scope="col">Salary</th>
+                        <th scope="col">Delete?</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -63,6 +64,8 @@
                         <td>{{person.firstName}} {{person.lastName}}</td>
                         <td>{{getDepById(person.departmentId)}}</td>
                         <td>{{person.salary}}</td>
+                        <td class="delete"><i class="fa-solid fa-person-circle-minus"
+                                (click)="deletePerson(person.id)"></i></td>
                     </tr>
 
                 </tbody>
@@ -77,5 +80,4 @@
     <div class="open-panel right-arrows">
         <span class="symbol"><i class="fa-solid fa-pen-to-square"></i></span>
     </div>
-
 </div>
