modal for delete

--- a/src/app/person/person.component.html
+++ b/src/app/person/person.component.html
@@ -65,7 +65,7 @@
                         <td>{{getDepById(person.departmentId)}}</td>
                         <td>{{person.salary}}</td>
                         <td class="delete"><i class="fa-solid fa-person-circle-minus"
-                                (click)="deletePerson(person.id)"></i></td>
+                                (click)="openModal(person.id)"></i></td>
                     </tr>
 
                 </tbody>
